--- a/style.css
+++ b/style.css
@@ -68,7 +68,9 @@ font-size: 1.5rem;
 display: flex;
 justify-content: space-between;
 align-items: center;
+transition: all 0.5s ease;
 }
+
 /* поля с мусорками сделали белымии нужны размеров */
 
  .todo li {
@@ -88,4 +90,15 @@ align-items: center;
  }
  .todo-item {
     padding: 0rem 0.5rem;
+}
+/* отступы поля */
+
+.fa-trash,
+.fa-check {
+    pointer-events: none;
+}
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
 }
